# Multiverse_of_Projects

./: 0_CodeCraft_AI.ipynb
1_csvAI/: Play_with_csvAI.ipynb
2_BlogTOPodcastGenerator/: README.md  main.py
3_Chat_with_video/: YouTube_video_downloader .ipynb  chatWith_video.ipynb
4_YouTube_Agent/: .env  app.py  critic.txt  info.txt  main.py  system_msg(agent).txt  youtube.py
5_story_book_generator/: art_d2_prompt.txt  art_d_prompt.txt  c_dev.txt  createStoryBook.py  img_gen.py  img_gen_prompt.txt  main.py  pdf_maker.txt  pdf_routh.py  q_parser.txt  story_main.py
6_Local_File_System_Agent/LocalFS_Agent/: README.md  app.py  pyproject.toml  requirements.txt
6_Local_File_System_Agent/LocalFS_Agent/server/: FileOps_helper.py  client.py  sys_msg.txt
7_stack-analyzer/StackSnap/: README.md  pyproject.toml  requirements.txt
7_stack-analyzer/StackSnap/src/stacksnap/: __init__.py
7_stack-analyzer/StackSnap/src/stacksnap/agent/: workflow.py
7_stack-analyzer/StackSnap/src/stacksnap/backend/: backend.py  testing_b.py
7_stack-analyzer/StackSnap/src/stacksnap/config/: config.yaml
7_stack-analyzer/StackSnap/src/stacksnap/frontend/: index.html
7_stack-analyzer/StackSnap/src/stacksnap/prompt_library/: prompt.txt
7_stack-analyzer/StackSnap/src/stacksnap/tools/: stacksnap_tool.py
7_stack-analyzer/StackSnap/src/stacksnap/utils/: config_loader.py  model_loader.py
8_Anime_Recommender/: .gitignore  main.py  pyproject.toml  requirements.txt
8_Anime_Recommender/app/: app.py
8_Anime_Recommender/chroma_db/: chroma.sqlite3
8_Anime_Recommender/config/: config.py
8_Anime_Recommender/data/: anime_updated.csv
8_Anime_Recommender/pipeline/: build_pipeline.py  inference_pipe.py
8_Anime_Recommender/src/: data_loader.py  recommender.py  vectorStore.py
