[project]
name = "localfs-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  
    "langchain>=0.3.27",
   
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.7",
    "mcp>=1.13.1",
    "nest-asyncio>=1.6.0",
    "streamlit>=1.49.1",
]
